update global leaderboard routes
